--- a/node/go-1.14.x/node-14.5.0/Dockerfile
+++ b/node/go-1.14.x/node-14.5.0/Dockerfile
@@ -3,12 +3,13 @@ FROM golang:1.14
 LABEL maintainer="Chengkun Kang <460876880@qq.com>"
 
 ENV GOPATH /go
+ENV PATH $PATH:$GOPATH/bin:/usr/local/go/bin
 # ENV HTTP_PROXY "http://your-own-proxy-addr.your-org.com:3128"
 # ENV HTTPS_PROXY "http://your-own-proxy-addr.your-org.com:3128"
 
 RUN set -x \
-    && go get -u -v github.com/revel/revel \
-    && go get -u -v github.com/revel/cmd/revel \
+    && go get -u github.com/revel/revel \
+    && go get -u github.com/revel/cmd/revel \
     && go get -u github.com/jinzhu/copier \
     && go get -u github.com/golang/protobuf/proto \
     && go get -u github.com/globalsign/mgo/bson \
@@ -21,6 +22,8 @@ RUN set -x \
     && go get -u google.golang.org/grpc \
     && go get -u github.com/lujiacn/mgodo
 
+RUN revel version
+
 # Install node
 ENV NODE_VERSION "14.5.0"
 ENV NODE_ZIP "node-v$NODE_VERSION-linux-x64.tar.gz"
@@ -28,7 +31,7 @@ ENV NODE_ZIP "node-v$NODE_VERSION-linux-x64.tar.gz"
 RUN curl -SLO https://nodejs.org/dist/v$NODE_VERSION/$NODE_ZIP && \
     tar -xzf "$NODE_ZIP" -C /usr/local --strip-components 1 && \
     rm "$NODE_ZIP" && \
-    node -v && npm -v && npm install -g yarn && revel version
+    node -v && npm -v && npm install -g yarn
 
 # clear apt cache and remove unnecessary packages
 # RUN apt-get autoclean && apt-get -y autoremove
