--- a/plain/go-1.16.x/Dockerfile
+++ b/plain/go-1.16.x/Dockerfile
@@ -3,15 +3,16 @@ FROM golang:1.16
 LABEL maintainer="460876880@qq.com"
 
 ENV GOPATH /go
+ENV PATH $PATH:$GOPATH/bin:/usr/local/go/bin
 # ENV HTTP_PROXY "http://your-own-proxy-addr.your-org.com:3128"
 # ENV HTTPS_PROXY "http://your-own-proxy-addr.your-org.com:3128"
 
 RUN set -x \
-    && go get -u -v github.com/revel/revel \
-    && go get -u -v github.com/revel/cmd \
-    && go get -u -v github.com/revel/config \
-    && go get -u -v github.com/revel/cron \
-    && go get -u -v github.com/revel/modules \
+    && go get -u github.com/revel/revel \
+    && go get -u github.com/revel/cmd/revel \
+    && go get -u github.com/revel/config \
+    && go get -u github.com/revel/cron \
+    && go get -u github.com/revel/modules \
     && go get -u github.com/jinzhu/copier \
     && go get -u github.com/golang/protobuf/proto \
     && go get -u github.com/globalsign/mgo/bson \
@@ -27,6 +28,8 @@ RUN set -x \
     && go get -u golang.org/x/tools \
     && go get -u google.golang.org/grpc \
     && go get -u github.com/lujiacn/mgodo
+
+RUN revel version
 
 # clear apt cache and remove unnecessary packages
 # RUN apt-get autoclean && apt-get -y autoremove
